--- a/app/src/main/res/layout/activity_blinge_login.xml
+++ b/app/src/main/res/layout/activity_blinge_login.xml
@@ -1,5 +1,5 @@
 <LinearLayout
-    android:id="@+id/email_login_form"
+    android:id="@+id/et_username"
     android:layout_height="wrap_content"
     android:layout_width="match_parent"
     android:orientation="vertical"
@@ -7,13 +7,15 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <android.support.design.widget.TextInputLayout
+        android:id="@+id/til_username"
         android:layout_height="wrap_content"
         android:layout_width="match_parent">
 
         <EditText
             android:hint="@string/prompt_email"
             android:id="@+id/email"
-            android:inputType="textEmailAddress"
+            android:inputType="number"
+            android:maxLength="10"
             android:layout_height="wrap_content"
             android:layout_width="match_parent"
             android:maxLines="1"
@@ -22,6 +24,7 @@
     </android.support.design.widget.TextInputLayout>
 
     <android.support.design.widget.TextInputLayout
+        android:id="@+id/til_password"
         android:layout_height="wrap_content"
         android:layout_width="match_parent">
 
@@ -44,6 +47,7 @@
         android:id="@+id/email_sign_in_button"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
+        android:padding="20dp"
         android:layout_width="match_parent"
         android:text="@string/action_sign_in"
         android:textStyle="bold" />
