--- a/app/src/main/res/layout/item_order_information.xml
+++ b/app/src/main/res/layout/item_order_information.xml
@@ -1,10 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_margin="10dp">
 
-    <TextView
-        android:id="@+id/tv_order_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-</LinearLayout>
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <com.blinge.deliveryguy.helpers.NameValueView
+            android:id="@+id/nv_order_customer_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:name="Name"
+            app:value=""
+            android:padding="5dp" />
+
+        <com.blinge.deliveryguy.helpers.NameValueView
+            android:id="@+id/nv_customer_number"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:name="Customer Number"
+            app:value=""
+            android:padding="5dp" />
+
+        <com.blinge.deliveryguy.helpers.NameValueView
+            android:id="@+id/nv_customer_address"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:name="Address"
+            android:padding="5dp" />
+
+        <com.blinge.deliveryguy.helpers.NameValueView
+            android:id="@+id/nv_product_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:name="Product Name"
+            app:value=""
+            android:padding="5dp" />
+    </LinearLayout>
+</android.support.v7.widget.CardView>
