--- a/app/src/main/res/layout/item_order_information.xml
+++ b/app/src/main/res/layout/item_order_information.xml
@@ -31,6 +31,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:name="Address"
+            app:value=""
             android:padding="5dp" />
 
         <com.blinge.deliveryguy.helpers.NameValueView
