--- a/app/src/main/res/layout/activity_order_details.xml
+++ b/app/src/main/res/layout/activity_order_details.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,5 +9,59 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.blinge.deliveryguy.ordermanager.OrderDetailsActivity">
+
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <com.blinge.deliveryguy.helpers.NameValueView
+            android:id="@+id/nv_order_customer_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="5dp"
+            app:name="Name"
+            app:value="" />
+
+        <com.blinge.deliveryguy.helpers.NameValueView
+            android:id="@+id/nv_customer_address"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="5dp"
+            app:name="Address"
+            app:value="" />
+
+        <com.blinge.deliveryguy.helpers.NameValueView
+            android:id="@+id/nv_product_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="5dp"
+            app:name="Product Name"
+            app:value="" />
+
+        <TextView
+            android:id="@+id/tv_customer_number"
+            android:layout_width="wrap_content"
+            android:drawableLeft="@drawable/ic_call_blue"
+            android:gravity="center"
+            android:padding="10dp"
+            tools:text="7738998881"
+            android:textSize="20sp"
+            android:layout_marginTop="20dp"
+            android:drawablePadding="10dp"
+            android:background="?android:selectableItemBackground"
+            android:layout_gravity="center_horizontal"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
+
+
+    <Button
+        android:id="@+id/btn_update_status"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:padding="30dp"
+        android:layout_margin="20dp"
+        android:text="Delivered" />
 
 </RelativeLayout>
