--- a/app/src/main/res/layout/activity_blinge_login.xml
+++ b/app/src/main/res/layout/activity_blinge_login.xml
@@ -18,12 +18,14 @@
             android:layout_height="wrap_content"
             android:layout_width="match_parent"
             android:maxLines="1"
+            android:textSize="25sp"
             android:singleLine="true" />
 
     </android.support.design.widget.TextInputLayout>
 
     <android.support.design.widget.TextInputLayout
         android:id="@+id/til_password"
+        android:layout_marginTop="20dp"
         android:layout_height="wrap_content"
         android:layout_width="match_parent">
 
@@ -37,6 +39,8 @@
             android:layout_height="wrap_content"
             android:layout_width="match_parent"
             android:maxLines="1"
+            android:textSize="25sp"
+
             android:singleLine="true" />
 
     </android.support.design.widget.TextInputLayout>
