--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -9,4 +9,16 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".loginmanager.SplashActivity">
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:gravity="center"
+        android:textSize="20sp"
+        android:drawablePadding="30dp"
+        android:textColor="@color/colorPrimary"
+        android:textStyle="bold"
+        android:drawableTop="@drawable/ic_launcher"
+        android:text="Blinge Delivery Boy App"/>
+
 </RelativeLayout>
